[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdb2reaction"
description = "pdb2reaction"
readme = "README.md"
authors = [{name = "Takuto Ohmura"}]
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "fairchem-core",
    "pysisyphus @ git+https://github.com/t-0hmura/torch_pysis.git", 
    "thermoanalysis @ git+https://github.com/t-0hmura/thermoanalysis.git",
    "torch-dmf" @ "git+https://github.com/t-0hmura/torch-dmf.git",
    "torch>=2.6.0",
    "torch_geometric>=2.7.0",
    "torch_scatter>=2.1.2",
    "numpy",
    "biopython",
    "ase>=3.25.0",
    "pyyaml",
    "click",
    "plotly",
    "kaleido",
    "pyscf==2.8.0",
    "gpu4pyscf-cuda12x==1.5.0; platform_machine == 'x86_64'",
    "cupy-cuda12x==13.4.1",
    "cutensor-cu12==2.2.0",
    "basis-set-exchange==0.11"
]

[project.scripts]
pdb2reaction = "pdb2reaction.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdb2reaction*"]

[tool.setuptools]
package-data = { "pdb2reaction" = ["py.typed"] }

[tool.setuptools.dynamic]
version = {attr = "pdb2reaction.__version__"}
